--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">MyApp</string>
+    <string name="app_name">WhatsApp</string>
     <string name="pergunte_meta_ai_ou_pesquise">Pergunte_à_Meta_AI_ou_pesquise</string>
 </resources>
